fixed inventory save exceptions, added logs