@@ -32,7 +32,7 @@ public class InventorySaveState extends PersistentState {
         List<InventoryEntry> inventoryEntries = this.entries.get(uuid);
         inventoryEntries.sort(InventoryEntry::compareTo);
         if (inventoryEntries.size() > 5) {
-            inventoryEntries.remove(inventoryEntries.size() - 1);
+            inventoryEntries.removeLast();
         }
         this.markDirty();
     }
@@ -46,6 +46,7 @@ public class InventorySaveState extends PersistentState {
     public void restore(ServerPlayerEntity player, int index) {
         List<InventoryEntry> savedInventories = this.getSavedInventories(player);
         if (index >= savedInventories.size()) return;
+        SharedConstants.LOG.info("Restoring inventory for player: {}", player.getName());
 
         PlayerInventory inventory = player.getInventory();
         for (int i = 0; i < inventory.size(); i++) {
@@ -59,16 +60,22 @@ public class InventorySaveState extends PersistentState {
         player.setExperienceLevel(0);
         player.addExperience(inventoryEntry.getExperience());
         inventoryEntry.forEach(inventory::setStack);
+        SharedConstants.LOG.info("Inventory restored.");
     }
 
     @Override
     public NbtCompound writeNbt(NbtCompound nbt, RegistryWrapper.WrapperLookup registryLookup) {
         entries.forEach((uuid, inventory) -> {
+            SharedConstants.LOG.info("Writing inventories for player: {}", uuid);
             NbtList inventories = new NbtList();
             for (InventoryEntry inventoryEntry : inventory) {
-                inventories.add(inventoryEntry.writeNbt(new NbtCompound()));
+                NbtCompound inventoryNbt = inventoryEntry.writeNbt(new NbtCompound(), ModSetup.SERVER.getRegistryManager());
+                if (inventoryNbt != null) {
+                    inventories.add(inventoryNbt);
+                }
             }
             nbt.put(uuid.toString(), inventories);
+            SharedConstants.LOG.info("Wrote inventories successfully.");
         });
         return nbt;
     }
@@ -76,10 +83,12 @@ public class InventorySaveState extends PersistentState {
     private static InventorySaveState load(NbtCompound nbt, RegistryWrapper.WrapperLookup registryLookup) {
         InventorySaveState state = new InventorySaveState();
         for (String key : nbt.getKeys()) {
+            SharedConstants.LOG.info("Loading inventories for player: {}", UUID.fromString(key));
             NbtList inventories = nbt.getList(key, NbtElement.COMPOUND_TYPE);
             inventories.stream().map(element -> (NbtCompound) element).forEach(inventoryNbt -> {
                 InventoryEntry.fromNbt(registryLookup, inventoryNbt).ifPresent(value -> state.addInventory(UUID.fromString(key), value));
             });
+            SharedConstants.LOG.info("Loaded inventory successfully");
         }
         return state;
     }
